--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,7 +25,8 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          pip install -r ./requirements/common.txt
+          pip install -U pip
+          # pip install -r ./requirements/common.txt
           pip install -r ./requirements/linters.txt
       - name: Black check
         run: |
